# WifiPixels

./: .gitignore  .travis.yml  .travis.yml.old  BlendRGB.h  CMakeLists.txt  EasyConnect.ino  README.md  README.mediawiki  WifiPixels.ino  html_static_resources.h  index.html  library.properties  pixel_helper.cpp  platformio.ini  webinterface.cpp  webinterface.h  wifi_helper.cpp  wifi_helper.h
QuickSetup/: BlendRGB.cpp  QuickSetup.ino  README.md  config.cpp  html_static_resources.h  mqtt_helper.cpp  mqtt_helper.h  pixel_helper.cpp  pixel_helper.h  quick_setup.cpp  quick_setup.h  webinterface.cpp  webinterface.h  wifi_helper.cpp  wifi_helper.h
examples/: New Text Document.txt
examples/WifiPixels_Blinky/: WifiPixels_Blinky.ino
examples/WifiPixels_Fade_RGB/: WifiPixels_Fade_RGB.ino
examples/WifiPixels_MQTT_NeoPixel/: WifiPixels_MQTT_NeoPixel.ino
src/: BlendRGB.cpp  CustomPattern.cpp  CustomPattern.h  config.cpp  config.h  eeprom_lib.cpp  eeprom_lib.h  html_static_resources.h  pixel_helper.cpp  pixel_helper.h  quick_setup.cpp  quick_setup.h  src.ino  structs.txt  webserver_setup.cpp  webserver_setup.h  wifi_setup.cpp  wifi_setup.h
test/: CMakeLists.txt  TemplateTest.cpp  test_config.cpp
